Fixed background color-contrast

--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -8,6 +8,10 @@
     display: flex;
     justify-content: space-between;
     padding: 1.25rem 1.5rem;
+    position: fixed;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: white;
 
     @include tablet {
         padding: 2rem;
@@ -21,11 +25,12 @@
         font-size: 0.75rem;
         color: $color-text-black;
         font-weight: bold;
-        flex-grow: 5;
         letter-spacing: 0.5rem;
+        width: 11rem;
 
         @include tablet {
             font-size: 1rem;
+            width: 13rem;
         }
     }
 
