--- a/src/pages/TechStack/TechStack.scss
+++ b/src/pages/TechStack/TechStack.scss
@@ -47,13 +47,13 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
+        justify-content: flex-end;
 
         @include tablet{
             width: 15rem;
             height: 15rem;
             margin-bottom: 2rem;
-            justify-content: space-around;
+            justify-content: flex-end;
             padding: 1rem 2rem 2rem;
         }  
     }
@@ -80,7 +80,12 @@
 
         @include tablet{
             width: 8rem;
-            padding-top: 3rem;
+            padding-bottom: 3rem;
         }
     }
+
+    &__axios{
+        padding-bottom: 3.65rem;
+    }
+
 }
